# langchain-runnableparallel-company-research

./: .env.example  .gitignore  README.md  pyproject.toml
company_research/: __main__.py  config.py  exceptions.py  main.py  pipeline.py
company_research/retrievers/: github.py  wikipedia.py
company_research/schemas/: models.py
tests/: test_pipeline.py  test_retrievers.py  test_schemas.py
