[project]
name = "company-research"
version = "0.1.0"
description = "Research a company using Wikipedia and GitHub in parallel via LangChain RunnableParallel"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["langchain", "runnable-parallel", "company-research", "wikipedia", "github"]
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0,<1.0",
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/your-username/company-research"
Source = "https://github.com/your-username/company-research"
Issues = "https://github.com/your-username/company-research/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "respx>=0.22,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
company-research = "company_research.main:entry"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["company_research*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
